crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chat_screen/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running savfox -m <model_name> or in your config.toml

› 1. gpt-5.2-codex (default)  Latest frontier agentic coding model.
  2. gpt-5.2                  Latest frontier model with improvements across
                              knowledge, reasoning and coding
  3. gpt-5.1-codex-max        Savfox-optimized flagship for deep and fast
                              reasoning.
  4. gpt-5.1-codex-mini       Optimized for savfox. Cheaper, faster, but less
                              capable.

  Press enter to select reasoning effort, or esc to dismiss.
