crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chat_screen/tests.rs
expression: term.backend().vt100().screen().contents()
---










• Working (0s • esc to interrupt)

  ↳ Queued while /review is running.
    ⌥ + ↑ edit

› Ask Savfox to do anything

  ? for shortcuts                                            100% context left
