crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chat_screen/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Savfox to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
