crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chat_screen/tests.rs
expression: combined
---
↳ Interacted with background terminal · just fix
  └ (waited)

↳ Interacted with background terminal · just fix
  └ ls
