crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chat_screen/tests.rs
expression: combined
---
↳ Interacted with background terminal · cargo test -p savfox-core
  └ (waited)

• Final response.
